// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot 1`] = `
<div
  class="_srOnly_fc0762 test"
>
  <div>
    Test
  </div>
</div>
`;

exports[`matches snapshot 2`] = `
<span
  class="_srOnly_fc0762"
>
  <div>
    Test
  </div>
</span>
`;
